--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,15 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'org.json', name: 'json', version: '20090211'
+    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+
     compileOnly 'org.projectlombok:lombok:1.18.6'
+
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
