--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
+    compile group: 'org.apache.tomcat.maven', name: 'tomcat7-maven-plugin', version: '2.2'
+    compile group: 'jstl', name: 'jstl', version: '1.2'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile group: 'javax.servlet.jsp.jstl', name: 'jstl-api', version: '1.2'
 
     compileOnly 'org.projectlombok:lombok:1.18.6'
 
