--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'war'
     id 'java'
 }
 
@@ -12,17 +13,21 @@ repositories {
 }
 
 dependencies {
-
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-    compile group: 'org.json', name: 'json', version: '20090211'
-    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.8'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.8'
+    compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+    compile group: 'org.glassfish.main.bean-validator', name: 'bean-validator', version: '5.1.0'
+    compile group: 'org.glassfish', name: 'javax.el', version: '3.0.1-b11'
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    compile group: 'org.apache.tomcat.maven', name: 'tomcat7-maven-plugin', version: '2.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
-    compile group: 'org.apache.tomcat.maven', name: 'tomcat7-maven-plugin', version: '2.2'
-    compile group: 'jstl', name: 'jstl', version: '1.2'
-    compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'javax.servlet.jsp.jstl', name: 'jstl-api', version: '1.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.6'
 
