--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile group: 'javax.servlet.jsp.jstl', name: 'jstl-api', version: '1.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'com.itextpdf', name: 'itextpdf', version: '5.4.5'
+    compile group: 'com.liferay', name: 'org.apache.commons.fileupload', version: '1.2.2.LIFERAY-PATCHED-1'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.6'
